@@ -3,8 +3,9 @@ AUX 20200314-big-endian.patch 11856 BLAKE2B ae107bec5156a60605d19588b61ce9b7869a
 AUX 20200314-stylemap.patch 869 BLAKE2B a5907efaa1357f5b445eadfa951d9558de78eb1f8eb271cac15318a6d1e7d95c4d56918ca41307c9ff74ab05bf3cc373a5189ccaa5c76282b2c0c5d6834bfaba SHA512 1f0e363d42606fb506dd6f747ac250cce6ab4b5bf49400095cab9fd48b68232a8d58325147d2e1f7ca223093d36edf020f70f383bb0bf24f3a2f2fc3b35fb747
 AUX 20200314-tilepath.patch 1142 BLAKE2B 61aa804682a5e486c2f131fd9d81fc5d29ca946f18d9d11a323d4c49cfa8c9404b846e2afb6ac4dbf00af78133f27819f72f678298c3abfaeecd576877ac1ed4 SHA512 2cbd0ac47c211ceda2e2e4d6b62a69432e084ec664d58ff5e259f2d1eee9b70b64610d4a428d5f86305c8427c21dd6a00944a86a995c8cc5f9aed63df4aa5a31
 DIST fontforge-20200314.tar.xz 13850076 BLAKE2B 5e6ae3b7940a5b3b08811abdfc9d151f231e6d457b219eb0c666e1b831db815b696f345eda0d4d423b7e340f56fca67205734ae19903b3815381080d34b5e95c SHA512 09f5dc93f87ca63668d72d108690604489d6b3cec7eedff1c07ad6d1ce5eae442ab60e79e71ae8b99e9808f3551011788025a86ffc3a9738518d99761d849975
+DIST fontforge-20200320.zip 20227239 BLAKE2B 79d7765a6da6eec0fe69b1342b500f53b4dca1299aad98374171043148ca644ea801fd5316596eae6727a1b02789310509c3dea3342eda69aba1d85a2abd5747 SHA512 699b477ef83dc412d86d3337662911c3fceb20db53b6e2bea5b8c46fbb4061d2c4c79cd0275e92e2233ca84790c987b28400223e0bb97e742eaff3555d806a6e
 EBUILD fontforge-20200314-r1.ebuild 2643 BLAKE2B 17258d1213fdad33da83c2fb7516602d31a0d8f3f424d631fb4c5152c97cb6dbd9ff95769955144d18a2df7ccfb7f30aabeecdefefb17a94ac49fcaf343f5df9 SHA512 9c8b1c876652a57ece214afe021706c0b9e7bde7f27303e31e4ced77edb3de1dde565978caff22614e895af0cbe0ea4391f756453c569b487e74ad737c0d0e64
-EBUILD fontforge-20200314-r2.ebuild 3038 BLAKE2B baa7dd57c70717797d05a05c2a295916f0e01a5a0a4e8cf2b116573cd3f8c75cfa680078dd96489e81c90118a57c976259074eb1c66b5e16838cbe90af1225a5 SHA512 19f86d975619833d5b38bf0442dd5e5039fd204d8fe6dcdb96058fa7e8d26e3a4b5ad177c75df4d7f452ddaebcc06723b803d94d4f370967f064d3723539b657
 EBUILD fontforge-20200314.ebuild 2644 BLAKE2B 25dc7d70e41c1e9c926c87d2da3b4bb844b71f4bd1e3c8a60de1fa5771d615b4ae0851f6a41e97393a140c05d24089ce68baa7b52a312983bf2679c2dc923b0a SHA512 a0fbdf2fa1e7c8a3a700660b9f4022249e4503104453d1694b8d69dd32dd40cf3f4cce924f50cbc06a55a8a65be2c62ba2703978403221d269c95d3fbd097ed0
-MISC ChangeLog 616 BLAKE2B e02b48108579c39079591bbeb297bdc22a418db4d74b47c58ece1b98fa6a4120d829c8423ec5b45b5b9ee638c4e61d1692d93e02c75e26e84ee2883bd577216e SHA512 a9867d40f5d7144cf7c756c7fdbd1a543c85dab06dce080ac91fa3503dfdbb8af7fb4713605d312b7d7c2c575823200a2d8db61e1a19ea408c403677d79051d5
+EBUILD fontforge-20200320.ebuild 2949 BLAKE2B 0d8529d171bcf02c0da45ec9d23e262036fd98051319963fa6c119822c4f1c57a324e84ac7f8773cbb5ffabbd57afa83e1a74a26d1a035b2d471be0a45bf747b SHA512 6d0a3e7c9f1aa95c3597110170749d605b6200db820ca7c0004280ebe5dae529185c329d5b15921ea55e0d2992b5226a5071eb1b5555a7bfc4cbc809fbb12405
+MISC ChangeLog 660 BLAKE2B 09832ec22f380cc800f01c22cb16b25b25a3ecc740c90fa2a5e789745a12303de5c8375b8381bdfbc627d2eb17b8457d608a46d3db3eed6af3e8b0f22b6b081f SHA512 30b682e04b23ae9b165a32966c3cb1147a7320a97e52f60c1366b6db520c0543842644c3ad7a624f7bcb24384c2f7c3803047fe63277ac3957761994c458348e
 MISC metadata.xml 1177 BLAKE2B 1bc538ca6b7bdaa523c207daeeb1b497daeb3b55754f195ed300063e81644ef968b1e1b2377a9a1740baa01fb99743e39ba0675af71d3f252128de1e50288763 SHA512 92d9d64df15f19d2a2e188d1583df64ca8f2ea79c0c5f8db7bda690ea1b194b8c856c65aad117df622f33e06a6f7effb6a53d879800844962dcd5bc91fa86a23
